--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+ @import "font-awesome";
+ @import "materialize";
+ @import "materialize/extras/nouislider";
